--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ defmt = "1"
 defmt-rtt = "1"
 panic-probe = { version = "1", features = ["print-defmt"] }
 
+pwm-freq = { path = "../pwm-freq" }
+
 # We're using a Pico by default on this template
 nfp1315 = "1.0.0"
 
@@ -22,6 +24,8 @@ nfp1315 = "1.0.0"
 # If you're not going to use a Board Support Package you'll need these:
 rp2040-hal = { version="0.11", features=["rt", "critical-section-impl"] }
 rp2040-boot2 = "0.3"
+pio = "0.2"
+frunk = "0.4.4"
 
 # cargo build/run
 [profile.dev]
@@ -56,21 +60,3 @@ debug = false
 debug-assertions = false
 opt-level = 0
 overflow-checks = false
-
-# cargo test
-[profile.test]
-codegen-units = 1
-debug = 2
-debug-assertions = true
-incremental = false
-opt-level = 3
-overflow-checks = true
-
-# cargo test --release
-[profile.bench]
-codegen-units = 1
-debug = 2
-debug-assertions = false
-incremental = false
-lto = 'fat'
-opt-level = 3
